@@ -108,6 +108,11 @@ public class HdfsTestUtil {
   }
   
   public static void teardownClass(MiniDFSCluster dfsCluster) throws Exception {
+    
+    if (badTlogOutStream != null) {
+      IOUtils.closeQuietly(badTlogOutStream);
+    }
+    
     SolrTestCaseJ4.resetFactory();
     System.clearProperty("solr.lock.type");
     System.clearProperty("test.build.data");
@@ -117,10 +122,6 @@ public class HdfsTestUtil {
     if (dfsCluster != null) {
       timers.remove(dfsCluster);
       dfsCluster.shutdown();
-    }
-    
-    if (badTlogOutStream != null) {
-      IOUtils.closeQuietly(badTlogOutStream);
     }
     
     // TODO: we HACK around HADOOP-9643
